css/main.css
html {
  box-sizing: border-box;
  font-family: 'Georgia', serif;
  line-height: 1.5;
  background-color: #f5f2f0;
}

*, *::before, *::after {
  box-sizing: inherit;
}

main {
  margin: 0;
  padding: 1rem;
}

img {
  width: 100%;
}

h1, h2 {
  font-family: "Denk One", sans-serif;
  color: #623b0c;
  margin: 0;
  padding-bottom: 1rem;
}
ol {
  display: grid;
  grid-template-columns: 1fr 1fr;
  margin: 0;
  gap: 1rem;
  padding: 0;
}

h2 {
  margin: 0;
}

li {
  list-style-type: none;
  border: 2px solid #623b0c;
  border-radius: 8px;
  background-color: #ede3db;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  padding: 1rem;
}

li a {
  color: #ede3db;
  background-color: #623b0c;
  text-decoration: none;
  padding: .5em .75em .6em;
  border-radius: 8px;
}

p {
  margin-bottom: 1 auto;
}

